actually fixed the alignment of the icons

--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -1,5 +1,5 @@
-.material-icons {
-	line-height: 2;
+nav .material-icons {
+	line-height: 2.2;
 }
 body{
 	padding-top: 70px;
